# binoculars

./: AUTHORS  README.md  pyproject.toml  setup.py
binoculars/: __init__.py  backend.py  dispatcher.py  fit.py  main.py  plot.py  space.py  util.py
binoculars/backends/: bm25.py  bm32.py  diffabs.py  example.py  id03.py  id03_xu.py  io7.py  sixs.py  soleil.py
binoculars/scripts/: D2Dview.py  __init__.py  binoviewer.py  fitaid.py  grafit2.py  gui.py  nxsViewer.py  process.py  server.py
contrib/grafit/: calculation.py  fit2D.py  tools.py
contrib/scripts/: D2Dview.py  binoviewer.py  grafit2.py
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/tests/: control
doc/source/: conf.py
doc/source/api/: config_q.txt
examples/scripts/: demo.py  demo_fit.py  demo_sixs.py
grafit/: __init__.py  calculation.py  fit2D.py  models.py  signals.py  tools.py
scripts/: D2Dview.py  binoculars  binoculars-fitaid  binoculars-gui  binoculars-processgui  binoculars-server  binoviewer.py  grafit2.py  nxsViewer.py
src/binoculars/: backend.py  dispatcher.py  errors.py  plot.py  util.py
src/binoculars/backends/: bm32.py  io7.py
src/binoculars/scripts/: __init__.py  fitaid.py  gui.py  process.py
test/: cfg.py  id03.py  metadata.py
tests/: test_cfg.py  test_id03.py  test_metadata.py
