[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "binoculars"
version = "0.0.15"
authors = [
    {name = "Willem Onderwaater", email = "onderwaa@esrf.fr"},
    {name = "Frédéric-Emmanuel Picca", email = "picca@synchrotron-soleil.fr"},
    {name = "Sander Roobol", email = "sander@esrf.fr"},
]

description = """
    Data reduction and analysis software for two-dimensional
    detectors in surface X-ray diffraction

    BINoculars is a tool for data reduction and analysis of large sets of
    surface diffraction data that have been acquired with a
    two-dimensional X-ray detector. The intensity of each pixel of a
    two-dimensional detector is projected onto a three-dimensional grid
    in reciprocal-lattice coordinates using a binning algorithm. This
    allows for fast acquisition and processing of high-resolution data
    sets and results in a significant reduction of the size of the data
    set. The subsequent analysis then proceeds in reciprocal space. It
    has evolved from the specific needs of the ID03 beamline at the ESRF,
    but it has a modular design and can be easily adjusted and extended
    to work with data from other beamlines or from other measurement
    techniques.
"""

license={text = "GPL-3+"}

classifiers=[
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
]

dependencies = [
    "h5py",
    "numpy",
    "matplotlib",
    "pyFAI",
    "PyGObject",
    "PyMca5",
    "PyQt5",
    "xrayutilities"
]

[project.scripts]
binoculars="binoculars.scripts"
binoculars-server="binoculars.scripts.server"

[project.gui-scripts]
binoculars-fitaid="binoculars.scripts.fitaid"
binoculars-gui="binoculars.scripts.gui"
binoculars-processgui="binoculars.scripts.process"

[tool.setuptools.packages.find]
include = ["binoculars*"]
# exclude = ["tests"]  # empty by default
