[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "binoculars"
# version = "0.0.15"  # Remove any existing version parameter.
dynamic = ["version"]
authors = [
    {name = "Willem Onderwaater", email = "onderwaa@esrf.fr"},
    {name = "Frédéric-Emmanuel Picca", email = "picca@synchrotron-soleil.fr"},
    {name = "Sander Roobol", email = "sander@esrf.fr"},
]

description = "Data reduction and analysis software for two-dimensional detectors in surface X-ray diffraction"

license={text = "GPL-3+"}

classifiers=[
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
]

dependencies = [
    "h5py",
    "numpy",
    "matplotlib",
    "pyFAI",
    "PyGObject",
    "PyMca5",
    "PyQt5",
    "xrayutilities"
]

[project.scripts]
binoculars="binoculars.scripts:main"
binoculars-server="binoculars.scripts.server:main"

[project.gui-scripts]
binoculars-fitaid="binoculars.scripts.fitaid:main"
binoculars-gui="binoculars.scripts.gui:main"
binoculars-processgui="binoculars.scripts.process:main"

[tool.setuptools.packages.find]
include = ["binoculars*"]

[tool.setuptools_scm]
